# Reconstruction-and-Synthesis-of-Lidar-Point-Clouds-of-Spray

./: .gitignore  .gitmodules  README.md
SpraySimulation/: SpraySimulation.sln
SpraySimulation/Assets/: DetectionResultParser.cs  LabelVehicle.cs  SpraySegmentation.cs
SpraySimulation/Assets/DetectionJsonFile/: seg50_detection_wID.json
SpraySimulation/Assets/Prefab/: CarSpraySet.prefab
SpraySimulation/Assets/Scene/: SpraySimSimple.unity
SpraySimulation/Assets/Scripts/: CloseToRealData.cs  Lidar.cs  LidarPointCloudExporter.cs  SprayModel.cs
SpraySimulation/Assets/Scripts/SprayVelocityInputDriver/: FilteredSprayVelocityInputDriver.cs
SpraySimulation/Config/: LabelConfig.txt  ManipulationCheck.txt  SimAugmentConfig.txt
SpraySimulation/ProjectSettings/: PackageManagerSettings.asset  ProjectSettings.asset
Tools/: concat_files.py
Tools/PCD_MergePointCloud/: CMakeLists.txt
Tools/PCD_MergePointCloud/include/: CustomPointType.hpp
Tools/PCD_MergePointCloud/src/: main.cpp
Tools/Refinement/: CMakeLists.txt  filter.txt
Tools/Refinement/include/: CustomPointType.hpp  FloatSerialization.hpp
Tools/Refinement/src/: FloatSerialization.cpp  main.cpp
Tools/Synthesis_particle_based/: CMakeLists.txt
Tools/Synthesis_particle_based/include/: Command.hpp
Tools/Synthesis_particle_based/src/: CustomPointType.cpp  FloatSerialization.cpp  main.cpp
Tools/Synthesis_texture_based/: CMakeLists.txt
Tools/Synthesis_texture_based/include/: CustomPointType.hpp
Tools/Synthesis_texture_based/src/: Command.cpp  main.cpp
